--- a/ScrumUI/Views/Shared/_Layout.cshtml
+++ b/ScrumUI/Views/Shared/_Layout.cshtml
@@ -15,9 +15,9 @@
                 <p class="site-title">@Html.ActionLink("Sprint Planner", "Index", "UserStory")</p>
             </div>
             <div class="float-right">
-                <section id="login">
+          @*      <section id="login">
                     @Html.Partial("_LoginPartial")
-                </section>
+                </section>*@
                 <nav>
                     <ul id="menu">
                         <li>@Html.ActionLink("User stories", "Index", "UserStory")</li>
