--- a/ScrumUI/Views/Task/Details.cshtml
+++ b/ScrumUI/Views/Task/Details.cshtml
@@ -8,50 +8,50 @@
 
 <fieldset>
     <legend>Task</legend>
-
+    <br />
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.UserStory.Title)
-    </div>
-    <div class="display-field">
+        <span style="font-weight: bold">@Html.DisplayNameFor(model => model.UserStory.Title): </span>
+        @*    </div>
+    <div class="display-field">*@
         @Html.DisplayFor(model => model.UserStory.Title)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Title)
+        @Html.DisplayNameFor(model => model.Title)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Title)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Description)
+        @Html.DisplayNameFor(model => model.Description)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Description)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.EstimatedHours)
+        @Html.DisplayNameFor(model => model.EstimatedHours)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.EstimatedHours)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Resource.FirstName)
+        @Html.DisplayNameFor(model => model.Resource.FirstName)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Resource.FirstName)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.RealHours)
+        @Html.DisplayNameFor(model => model.RealHours)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.RealHours)
     </div>
 </fieldset>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id=Model.TaskId }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.TaskId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
