--- a/ScrumUI/Views/UserStory/Index.cshtml
+++ b/ScrumUI/Views/UserStory/Index.cshtml
@@ -61,8 +61,8 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.UserStoryId }) |
-                @Html.ActionLink("Details", "Details", new { id = item.UserStoryId }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.UserStoryId })
+                @Html.ActionLink("Details", "Details", new { id = item.UserStoryId }) @*|
+                @Html.ActionLink("Delete", "Delete", new { id = item.UserStoryId })*@
             </td>
         </tr>
     }
