--- a/ScrumUI/Views/UserStory/Edit.cshtml
+++ b/ScrumUI/Views/UserStory/Edit.cshtml
@@ -6,7 +6,8 @@
 
 <h2>Edit</h2>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
@@ -15,11 +16,11 @@
 
         @Html.HiddenFor(model => model.UserStoryId)
         <br />
-        <div class="editor-label" >
+        <div class="editor-label">
             @Html.LabelFor(model => model.Title)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Title)
+            @Html.TextAreaFor(model => model.Title)
             @Html.ValidationMessageFor(model => model.Title)
         </div>
 
@@ -27,7 +28,7 @@
             @Html.LabelFor(model => model.Description)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Description)
+            @Html.TextAreaFor(model => model.Description)
             @Html.ValidationMessageFor(model => model.Description)
         </div>
 
